<resources>
    <string name="app_name">Hello!SupremeCop</string>

    <string name="settings">Settings</string>

    <!-- login -->
    <string name="activate_action_title">Activate</string>
    <string name="activation_key_hint">Activation key</string>
    <string name="activation_key_empty_msg">Enter activation key</string>
    <string name="activation_key_is_invalid">Invalid activation key</string>
    <string name="activation_key_is_used">Key is already activated by another user</string>
    <string name="device_trouble">Your device have not an unique id. Try activate on another device!</string>
    <string name="temporary_unavailable">Temporary unavailable</string>

    <!-- main -->
    <string name="test">Test checkout</string>
    <string name="start">Start search</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear basket</string>
    <string name="hello_label">Hello! SupremeCop\nby @qqdasdzxc</string>
    <string name="qqdasdzxc_label">by @qqdasdzxc</string>

    <!-- messages -->
    <string name="everything_is_sold_out">Everything is sold out</string>
    <string name="did_not_find_an_item">Did not find an item</string>
    <string name="item_was_found_msg">Item was found</string>
    <string name="test_mode_start_working_msg">Searching first non sold out item</string>
    <string name="test_mode_checkout_time_msg">Test mode: checkout in %s</string>
    <string name="drop_mode_start_working_msg">Searching new items</string>
    <string name="needed_sizes_sold_out_msg">Your needed sizes are sold out!</string>
    <string name="user_profile_empty_msg">Set your profile in settings!</string>
    <string name="checkout_timing_msg">Checkout timing is: %s</string>

    <!-- settings -->
    <string name="settings_save_action_title">Save</string>
    <string name="settings_item_section_title">Item section</string>
    <string name="settings_item_type_title">Type</string>
    <string name="settings_item_title_key_words_title">Title key words</string>
    <string name="settings_item_title_help_msg">To cop an item you should add one or more title words. Examples: \'box\', \'logo\', \'tee\'
        or \'tee\', \'logo\', \'box\'.
        \nDo not add title key words like this: \'tee box logo\' as one word.
        \nFind out the exact name and color of the item before drop!</string>
    <string name="settings_add_item_title_keyword_action_title">Add</string>
    <string name="settings_item_color_name_title">Color name</string>
    <string name="settings_item_random_color_switch_title">Random color</string>
    <string name="settings_item_size_title">Size</string>
    <string name="settings_item_one_size_switch_title">One size</string>
    <string name="settings_item_size_edit_action_title">Edit</string>

    <string name="settings_billing_shipping_section_title">Billing/shipping section</string>
    <string name="settings_user_full_name_title">Full name</string>
    <string name="settings_user_email_title">Email</string>
    <string name="settings_user_tel_title">Tel</string>
    <string name="settings_user_address_title">Address</string>
    <string name="settings_user_address_2_title">Address 2</string>
    <string name="settings_user_address_3_title">Address 3</string>
    <string name="settings_user_city_title">City</string>
    <string name="settings_user_postcode_title">Postcode</string>

    <string name="settings_payment_section_title">Payment section</string>
    <string name="settings_payment_card_type_title">Card type</string>
    <string name="settings_payment_paypal_message">You will be redirected to paypal to process payment</string>
    <string name="settings_payment_card_number_title">Card number</string>
    <string name="settings_payment_cvv_title">CVV</string>

    <!-- Bottom fragments -->
    <string name="add_keyword_hint">Key word</string>
    <string name="add_keyword_action_title">Add</string>
    <string name="add_key_word_description">Title key words examples: \'box\', \'logo\', \'tee\'. Enter words one by
        one.
    </string>
    <string name="add_size_description">Select needed sizes in order you want to buy (ex. 1 - Small 2 - Medium: if Small
        is sold out, buy Medium). If you select nothing, bot will pick first available size!
    </string>
    <string name="add_size_current_order_title">Your current size order:</string>
    <string name="add_size_save_action_title">Save</string>

</resources>
