<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

        <WebView
                android:id="@+id/main_web_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:id="@+id/main_hello_label_view"
                style="@style/TitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/qqdasdzxc_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/center_horizontal_guideline"/>

        <!--<TextView-->
        <!--android:id="@+id/main_nick_label_view"-->
        <!--style="@style/TitleTextView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/qqdasdzxc_label"-->
        <!--app:layout_constraintTop_toBottomOf="@id/main_logo_view"-->
        <!--app:layout_constraintEnd_toEndOf="@id/main_logo_view"/>-->

        <ImageView
                android:id="@+id/main_settings_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/start_end_margin"
                android:layout_marginTop="@dimen/start_end_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_settings"
                tools:ignore="ContentDescription"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/stop_button"
                style="@style/BaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:layout_marginEnd="@dimen/start_end_margin"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/start_button"
                style="@style/BaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/start_end_margin"
                android:text="@string/start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/center_horizontal_guideline"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/center_horizontal_guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/test_button"
                style="@style/BaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/start_end_margin"
                android:text="@string/test"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/center_horizontal_guideline"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_basket_button"
                style="@style/BaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/start_end_margin"
                android:text="@string/clear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>